hoy, khong lam nua

--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,34 @@ body {
   padding: 10px 20px;
   background: #fff;
   border-radius: 8px;
-  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  border: 1px solid #E8E8EF;
+  box-shadow: 0px 2px 8px rgba(34,34,87,0.05);
   user-select: none;
+}
+
+.panel-node-item:hover {
+  box-shadow: none;
+}
+
+.search-wrapper {
+  display: flex;
+  margin-bottom: 1rem;
+  align-items: center;
+  position: relative;
+}
+
+.search-input {
+  width: 100%;
+  padding: 10px;
+  background-color: #FFF;
+  border: 1px solid #E8E8EF;
+  box-sizing: border-box;
+  box-shadow: 0px 2px 8px rgba(34,34,87,0.05);
+  border-radius: 5px;
+}
+
+.search-icon {
+  position: absolute;
+  right: 14px;
+  color: #a5a5b8;
 }
