--- a/src/App.css
+++ b/src/App.css
@@ -1,55 +1,3 @@
-body {
-  color: #09123e;
-}
-
-.flow-wrapper {
-  height: 100vh;
-  background-color: #EEE;
-}
-
-.panel {
-  background-color: #FFF;
-  width: 300px;
-  height: 100vh;
-  position: fixed;
-  right: 0;
-  padding: 2rem;
-}
-
-.panel-node-item {
-  cursor: pointer;
-  margin-bottom: 20px;
-  padding: 10px 20px;
-  background: #fff;
-  border-radius: 8px;
-  border: 1px solid #E8E8EF;
-  box-shadow: 0px 2px 8px rgba(34,34,87,0.05);
-  user-select: none;
-}
-
-.panel-node-item:hover {
-  box-shadow: none;
-}
-
-.search-wrapper {
-  display: flex;
-  margin-bottom: 1rem;
-  align-items: center;
-  position: relative;
-}
-
-.search-input {
-  width: 100%;
-  padding: 10px;
-  background-color: #FFF;
-  border: 1px solid #E8E8EF;
-  box-sizing: border-box;
-  box-shadow: 0px 2px 8px rgba(34,34,87,0.05);
-  border-radius: 5px;
-}
-
-.search-icon {
-  position: absolute;
-  right: 14px;
-  color: #a5a5b8;
+body, html {
+  height: 100%;
 }
